Add buttons/icons for resources and funding menu items

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-02-navigation/02-organisms-00-regions-02-navigation.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-02-navigation/02-organisms-00-regions-02-navigation.escaped.html
@@ -36,12 +36,48 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+              &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                      &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                        &lt;div class=&quot;block-inner&quot;&gt;
+                          &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+              &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                      &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                        &lt;div class=&quot;block-inner&quot;&gt;
+                          &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- ENGINES --&gt;
           &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown&quot;&gt;
