--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.escaped.html
@@ -120,15 +120,15 @@
             &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
                 &lt;div class=&quot;layout-slat__media&quot;&gt; 
                   &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/inigo-78-78.jpg&quot;&gt;&lt;/a&gt;
+                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cj-78-78.jpg&quot;&gt;&lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;profile-thumb__name&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt;  
+                    &lt;a href=&quot;#&quot;&gt;C.J. Cregg&lt;/a&gt;  
                   &lt;/div&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;layout-slat__content&quot;&gt;
                   &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-                    Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
+                    Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
                   &lt;/div&gt;
                 &lt;/div&gt;
             &lt;/article&gt;
