--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
@@ -272,6 +272,21 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
+                      <img src="../../images-patternlab/cj-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
                       <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
@@ -287,28 +302,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/watson-35-35.jpg">
+                      <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/josh-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
+                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
                     </div>
                   </div>
                 </div>
