--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.escaped.html
@@ -47,12 +47,48 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+              &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                      &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                        &lt;div class=&quot;block-inner&quot;&gt;
+                          &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+              &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                      &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                        &lt;div class=&quot;block-inner&quot;&gt;
+                          &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- ENGINES --&gt;
           &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown&quot;&gt;
@@ -630,6 +666,21 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                  &lt;div class=&quot;layout-slat__content&quot;&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__meta&quot;&gt;
+                      Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
+                  &lt;div class=&quot;layout-slat__media&quot;&gt;      
+                    &lt;div class=&quot;view__author-image&quot;&gt;
                       &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -645,28 +696,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/watson-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Veggies sunt bona vobis, proinde vos postulo&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Dr. John Watson, M.D.&lt;/strong&gt; | February 10 at 1:20pm
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/div&gt;
-              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
-                  &lt;div class=&quot;layout-slat__media&quot;&gt;      
-                    &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/josh-35-35.jpg&quot;&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                  &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/div&gt;
-                    &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Joshua Lyman&lt;/strong&gt; | July 22 at 11:12am
+                      Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
