--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation/index.html
@@ -96,12 +96,48 @@
           </div>
         </li>
         <!-- FUNDING -->
-        <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding">
+        <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
           <a href="#"> Funding </a>
+          <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+            <div class="mega-dropdown-inner">
+              <div class="tb-megamenu-row row-fluid">
+                <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                  <div class="tb-megamenu-column-inner mega-inner clearfix">
+                    <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                      <div class="block-inner">
+                        <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                          <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
+                          <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div
         </li>
         <!-- RESOURCES -->
-        <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources">
+        <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
           <a href="#"> Resources </a>
+          <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+            <div class="mega-dropdown-inner">
+              <div class="tb-megamenu-row row-fluid">
+                <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                  <div class="tb-megamenu-column-inner mega-inner clearfix">
+                    <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                      <div class="block-inner">
+                        <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                          <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
+                          <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </li>
         <!-- ENGINES -->
         <li class="tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown">
@@ -489,12 +525,48 @@
           &lt;/div&gt;
         &lt;/li&gt;
         &lt;!-- FUNDING --&gt;
-        &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding&quot;&gt;
+        &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
           &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
+          &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+            &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+              &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                      &lt;div class=&quot;block-inner&quot;&gt;
+                        &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                          &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
+                          &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div
         &lt;/li&gt;
         &lt;!-- RESOURCES --&gt;
-        &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources&quot;&gt;
+        &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
           &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
+          &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+            &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+              &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                      &lt;div class=&quot;block-inner&quot;&gt;
+                        &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                          &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
+                          &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
         &lt;/li&gt;
         &lt;!-- ENGINES --&gt;
         &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown&quot;&gt;
@@ -881,12 +953,48 @@
         </div>
       </li>
       <!-- FUNDING -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding">
+      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
         <a href="#"> Funding </a>
+        <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+          <div class="mega-dropdown-inner">
+            <div class="tb-megamenu-row row-fluid">
+              <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                <div class="tb-megamenu-column-inner mega-inner clearfix">
+                  <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                    <div class="block-inner">
+                      <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                        <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
+                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div
       </li>
       <!-- RESOURCES -->
-      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources">
+      <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
         <a href="#"> Resources </a>
+        <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+          <div class="mega-dropdown-inner">
+            <div class="tb-megamenu-row row-fluid">
+              <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                <div class="tb-megamenu-column-inner mega-inner clearfix">
+                  <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                    <div class="block-inner">
+                      <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                        <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
+                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <!-- ENGINES -->
       <li class="tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown">
@@ -1268,12 +1376,48 @@
         &lt;/div&gt;
       &lt;/li&gt;
       &lt;!-- FUNDING --&gt;
-      &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding&quot;&gt;
+      &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
         &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
+        &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+          &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+            &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+              &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                    &lt;div class=&quot;block-inner&quot;&gt;
+                      &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div
       &lt;/li&gt;
       &lt;!-- RESOURCES --&gt;
-      &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources&quot;&gt;
+      &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
         &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
+        &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+          &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+            &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+              &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                    &lt;div class=&quot;block-inner&quot;&gt;
+                      &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
       &lt;/li&gt;
       &lt;!-- ENGINES --&gt;
       &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown&quot;&gt;
