--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
@@ -104,12 +104,48 @@
             </div>
           </li>
           <!-- FUNDING -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding">
+          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
             <a href="#"> Funding </a>
+            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+              <div class="mega-dropdown-inner">
+                <div class="tb-megamenu-row row-fluid">
+                  <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                    <div class="tb-megamenu-column-inner mega-inner clearfix">
+                      <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                        <div class="block-inner">
+                          <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                            <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div
           </li>
           <!-- RESOURCES -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources">
+          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
             <a href="#"> Resources </a>
+            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+              <div class="mega-dropdown-inner">
+                <div class="tb-megamenu-row row-fluid">
+                  <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                    <div class="tb-megamenu-column-inner mega-inner clearfix">
+                      <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                        <div class="block-inner">
+                          <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                            <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </li>
           <!-- ENGINES -->
           <li class="tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown">
@@ -592,15 +628,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/inigo-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Inigo Montoya</a>  
+                    <a href="#">C.J. Cregg</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
+                    Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
                   </div>
                 </div>
             </article>
