--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.escaped.html
@@ -47,12 +47,48 @@
             &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- FUNDING --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Funding &lt;/a&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+              &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                      &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                        &lt;div class=&quot;block-inner&quot;&gt;
+                          &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div
           &lt;/li&gt;
           &lt;!-- RESOURCES --&gt;
-          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources&quot;&gt;
+          &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown&quot;&gt;
             &lt;a href=&quot;#&quot;&gt; Resources &lt;/a&gt;
+            &lt;div class=&quot;tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child&quot;&gt;
+              &lt;div class=&quot;mega-dropdown-inner&quot;&gt;
+                &lt;div class=&quot;tb-megamenu-row row-fluid&quot;&gt;
+                  &lt;div class=&quot;tb-megamenu-column span12 mega-col-nav&quot; data-width=&quot;12&quot;&gt;
+                    &lt;div class=&quot;tb-megamenu-column-inner mega-inner clearfix&quot;&gt;
+                      &lt;div class=&quot;tb-megamenu-block tb-block tb-megamenu-block&quot;&gt;
+                        &lt;div class=&quot;block-inner&quot;&gt;
+                          &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
+                            &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
           &lt;/li&gt;
           &lt;!-- ENGINES --&gt;
           &lt;li class=&quot;tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown&quot;&gt;
@@ -535,15 +571,15 @@
             &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
                 &lt;div class=&quot;layout-slat__media&quot;&gt; 
                   &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/inigo-78-78.jpg&quot;&gt;&lt;/a&gt;
+                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cj-78-78.jpg&quot;&gt;&lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;profile-thumb__name&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;Inigo Montoya&lt;/a&gt;  
+                    &lt;a href=&quot;#&quot;&gt;C.J. Cregg&lt;/a&gt;  
                   &lt;/div&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;layout-slat__content&quot;&gt;
                   &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-                    Hello. My name is Inigo Montoya. You killed my father. Prepare to die.
+                    Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
                   &lt;/div&gt;
                 &lt;/div&gt;
             &lt;/article&gt;
