--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
@@ -104,12 +104,48 @@
             </div>
           </li>
           <!-- FUNDING -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding">
+          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--funding dropdown">
             <a href="#"> Funding </a>
+            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+              <div class="mega-dropdown-inner">
+                <div class="tb-megamenu-row row-fluid">
+                  <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                    <div class="tb-megamenu-column-inner mega-inner clearfix">
+                      <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                        <div class="block-inner">
+                          <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                            <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div
           </li>
           <!-- RESOURCES -->
-          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources">
+          <li class="tb-megamenu-item level-1 mega tb-megamenu-item--resources dropdown">
             <a href="#"> Resources </a>
+            <div class="tb-megamenu-submenu dropdown-menu mega-dropdown-menu nav-child">
+              <div class="mega-dropdown-inner">
+                <div class="tb-megamenu-row row-fluid">
+                  <div class="tb-megamenu-column span12 mega-col-nav" data-width="12">
+                    <div class="tb-megamenu-column-inner mega-inner clearfix">
+                      <div class="tb-megamenu-block tb-block tb-megamenu-block">
+                        <div class="block-inner">
+                          <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
+                            <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </li>
           <!-- ENGINES -->
           <li class="tb-megamenu-item level-1 mega tb-megamenu-item--communities mega-align-right dropdown">
@@ -687,6 +723,21 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
+                      <img src="../../images-patternlab/cj-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
                       <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
@@ -702,28 +753,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/watson-35-35.jpg">
+                      <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/josh-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
+                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
                     </div>
                   </div>
                 </div>
