tweaked mobile menu for new dropdown styles

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation/index.html
@@ -107,7 +107,7 @@
                       <div class="block-inner">
                         <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                           <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
-                          <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                          <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Funding Opportunity</a>
                         </div>
                       </div>
                     </div>
@@ -129,7 +129,7 @@
                       <div class="block-inner">
                         <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                           <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
-                          <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                          <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Resource</a>
                         </div>
                       </div>
                     </div>
@@ -536,7 +536,7 @@
                       &lt;div class=&quot;block-inner&quot;&gt;
                         &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
                           &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
-                          &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                          &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add a Funding Opportunity&lt;/a&gt;
                         &lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
@@ -558,7 +558,7 @@
                       &lt;div class=&quot;block-inner&quot;&gt;
                         &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
                           &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
-                          &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                          &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add a Resource&lt;/a&gt;
                         &lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
@@ -964,7 +964,7 @@
                     <div class="block-inner">
                       <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                         <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
-                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Funding Opportunity</a>
                       </div>
                     </div>
                   </div>
@@ -986,7 +986,7 @@
                     <div class="block-inner">
                       <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                         <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
-                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                        <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Resource</a>
                       </div>
                     </div>
                   </div>
@@ -1387,7 +1387,7 @@
                     &lt;div class=&quot;block-inner&quot;&gt;
                       &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
                         &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
-                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add a Funding Opportunity&lt;/a&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -1409,7 +1409,7 @@
                     &lt;div class=&quot;block-inner&quot;&gt;
                       &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
                         &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
-                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add a Resource&lt;/a&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
