--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation-01-main-menu/01-molecules-03-navigation-01-main-menu.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-03-navigation-01-main-menu/01-molecules-03-navigation-01-main-menu.escaped.html
@@ -40,7 +40,7 @@
                     &lt;div class=&quot;block-inner&quot;&gt;
                       &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
                         &lt;a class=&quot;tb-megamenu-big-button has-icon-funding&quot; href=&quot;#&quot;&gt;Browse all Funding Opportunities&lt;/a&gt;
-                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Funding Opportunity&lt;/a&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add a Funding Opportunity&lt;/a&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -62,7 +62,7 @@
                     &lt;div class=&quot;block-inner&quot;&gt;
                       &lt;div class=&quot;block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu&quot;&gt;
                         &lt;a class=&quot;tb-megamenu-big-button has-icon-resources&quot; href=&quot;#&quot;&gt;Browse all Resources&lt;/a&gt;
-                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add an Resource&lt;/a&gt;
+                        &lt;a class=&quot;tb-megamenu-big-button has-icon-add&quot; href=&quot;#&quot;&gt;Add a Resource&lt;/a&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
