--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-user/04-pages-user.html
@@ -115,7 +115,7 @@
                         <div class="block-inner">
                           <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                             <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
-                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Funding Opportunity</a>
                           </div>
                         </div>
                       </div>
@@ -137,7 +137,7 @@
                         <div class="block-inner">
                           <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                             <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
-                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Resource</a>
                           </div>
                         </div>
                       </div>
@@ -713,7 +713,7 @@
           </div>
         </div>
       </div>
-
+      
         
       <div class="pane pane--recent-conversations-recent-conversations">
         <h2 class="pane__title">Recent Conversations</h2>  
@@ -723,28 +723,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/daenerys-35-35.jpg">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/scully-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                     </div>
                   </div>
                 </div>
@@ -760,6 +745,21 @@
                     <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
                     <div class="view__meta">
                       Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
+                      <img src="../../images-patternlab/daenerys-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
                     </div>
                   </div>
                 </div>
