--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-wanteds-landing/04-pages-wanteds-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-wanteds-landing/04-pages-wanteds-landing.html
@@ -115,7 +115,7 @@
                         <div class="block-inner">
                           <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                             <a class="tb-megamenu-big-button has-icon-funding" href="#">Browse all Funding Opportunities</a>
-                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Funding Opportunity</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Funding Opportunity</a>
                           </div>
                         </div>
                       </div>
@@ -137,7 +137,7 @@
                         <div class="block-inner">
                           <div class="block block-gie-general-innovation-submenu block--gie-general block--gie-general-innovation-submenu">
                             <a class="tb-megamenu-big-button has-icon-resources" href="#">Browse all Resources</a>
-                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add an Resource</a>
+                            <a class="tb-megamenu-big-button has-icon-add" href="#">Add a Resource</a>
                           </div>
                         </div>
                       </div>
